client/vite_error.txt
[33mThe CJS build of Vite's Node API is deprecated. See https://vite.dev/guide/troubleshooting.html#vite-cjs-node-api-deprecated for more details.[39m
[36mvite v5.4.21 [32mbuilding for production...[36m[39m
transforming...
(node:20440) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///C:/Users/alanm/Desktop/Legacyy/client/postcss.config.js is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to C:\Users\alanm\Desktop\Legacyy\client\package.json.
(Use `node --trace-warnings ...` to show where the warning was created)
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/alanm/Desktop/Legacyy/client): [Error] Loading PostCSS Plugin failed: Cannot find module 'tailwindcss'
Require stack:
- C:\Users\alanm\Desktop\Legacyy\client\postcss.config.js

(@C:\Users\alanm\Desktop\Legacyy\client\postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'tailwindcss'
Require stack:
- C:\Users\alanm\Desktop\Legacyy\client\postcss.config.js

(@C:\Users\alanm\Desktop\Legacyy\client\postcss.config.js)
    at load (file:///C:/Users/alanm/Desktop/Legacyy/client/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///C:/Users/alanm/Desktop/Legacyy/client/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///C:/Users/alanm/Desktop/Legacyy/client/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///C:/Users/alanm/Desktop/Legacyy/client/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///C:/Users/alanm/Desktop/Legacyy/client/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v24.13.0
